# myks-gopro

./: .gitignore  Makefile  pyproject.toml
experiments/gpmf-parser/: Makefile  README.md  gpmf.py
src/myks_gopro/: db.py  gpmf.py  mp4.py  resvg.py
tests/: test_resvg.py
