[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myks-gopro"
version = "0.1"
dependencies = [
    "numpy",
]
requires-python = ">= 3.12"
authors = [
    { name = "Aymeric Augustin", email = "aymeric.augustin@fractalideas.com" },
]
description = "A toolkit for adding dashboards on GoPro videos"
license = { text = "BSD-3-Clause" }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]

[tool.ruff.lint.isort]
lines-after-imports = 2
